DHCPD-To-MicrosoftDHCP-Migrator/Parser/DHCPDConfigParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.1-SNAPSHOT
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from I:\Work\DHCPD-To-MicrosoftDHCP-Migrator\DHCPD-To-MicrosoftDHCP-Migrator\ANTLR\DHCPDConfig.g4 by ANTLR 4.1-SNAPSHOT
namespace DhcpdToMicrosoft.Parser
{
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.1-SNAPSHOT")]
public partial class DHCPDConfigParser : Parser {
	public const int
		DOT=1, SLASH=2, COLON=3, SEMI=4, LPAREN=5, MY=6, PARTNER=7, AT=8, RPAREN=9, 
		LBRACE=10, RBRACE=11, HOST=12, CLASS=13, SHARED_NETWORK=14, SUBNET=15, 
		SUBNET6=16, GROUP=17, FIXED_ADDRESS=18, LEASE=19, STARTS=20, ENDS=21, 
		TIMESTAMP=22, HARDWARE=23, CLIENT_HOSTNAME=24, DYNAMIC_BOOTP=25, POOL=26, 
		RANGE=27, TEMPORARY=28, LBRACKET=29, RBRACKET=30, NETMASK=31, AllowDenyKeyword=32, 
		FAILOVER=33, FAILOVER_PEER=34, PEER=35, ADDRESS=36, PORT=37, NEVER=38, 
		DEFAULT_LEASE_TIME=39, MAX_LEASE_TIME=40, DYNAMIC_BOOTP_LEASE_CUTOFF=41, 
		DYNAMIC_BOOTP_LEASE_LENGTH=42, DDNS_UPDATE_STYLE=43, BOOT_UNKNOWN_CLIENTS=44, 
		ONE_LEASE_PER_CLIENT=45, USE_HOST_DECL_NAME=46, NEXT_SERVER=47, SERVER_IDENTIFIER=48, 
		FILENAME=49, ALLOW=50, DENY=51, USE_LEASE_ADDR_FOR_DEFAULT_ROUTE=52, AUTHORITATIVE=53, 
		NOT_AUTHORITATIVE=54, PRIMARY=55, SECONDARY=56, OPTION=57, VENDOR_CLASS=58, 
		USER_CLASS=59, STATE=60, TSTP=61, TSFP=62, ATSFP=63, BINDING=64, NEXT=65, 
		CLTT=66, SERVER_DUID=67, HARDWARE_TYPES=68, Boolean=69, QUOTE=70, ColonSeparatedList=71, 
		Date=72, NUMBER=73, Ip4Address=74, BACKSLASH=75, UID=76, UIDSTRING=77, 
		SERVERDUIDSTRING=78, STRING=79, WS=80, COMMENT=81;
	public static readonly string[] tokenNames = {
		"<INVALID>", "'.'", "'/'", "':'", "';'", "'('", "'my'", "'partner'", "'at'", 
		"')'", "'{'", "'}'", "'host'", "'class'", "'shared-network'", "'subnet'", 
		"'subnet6'", "'group'", "'fixed-address'", "'lease'", "'starts'", "'ends'", 
		"'timestamp'", "'hardware'", "'client-hostname'", "'dynamic-bootp'", "'pool'", 
		"'range'", "'temporary'", "'['", "']'", "'netmask'", "AllowDenyKeyword", 
		"'failover'", "'failoverpeer'", "'peer'", "'address'", "'port'", "'never'", 
		"'default-lease-time'", "'max-lease-time'", "'dynamic-bootp-lease-cutoff'", 
		"'dynamic-bootp-lease-length'", "'ddns-update-style'", "'boot-unknown-clients'", 
		"'one-lease-per-client'", "'use-host-decl-name'", "'next-server'", "'server-identifier'", 
		"'filename'", "'allow'", "'deny'", "'use-lease-addr-for-default-route'", 
		"'authoritative'", "'notauthoritative'", "'primary'", "'secondary'", "'option'", 
		"'vendorclass'", "'userclass'", "'state'", "'tstp'", "'tsfp'", "'atsfp'", 
		"'binding'", "'next'", "'cltt'", "'server-duid'", "HARDWARE_TYPES", "Boolean", 
		"'\"'", "ColonSeparatedList", "Date", "NUMBER", "Ip4Address", "'\\'", 
		"'uid'", "UIDSTRING", "SERVERDUIDSTRING", "STRING", "WS", "COMMENT"
	};
	public const int
		RULE_config = 0, RULE_stringParameter = 1, RULE_parameter = 2, RULE_declaration = 3, 
		RULE_statement = 4, RULE_statements = 5, RULE_hostname = 6, RULE_hostDeclaration = 7, 
		RULE_klass = 8, RULE_classDeclaration = 9, RULE_sharedNetwork = 10, RULE_sharedNetworkDeclaration = 11, 
		RULE_subnet = 12, RULE_netmask = 13, RULE_subnetDeclaration = 14, RULE_subnet6 = 15, 
		RULE_subnet6Declaration = 16, RULE_groupDeclaration = 17, RULE_fixedAddress = 18, 
		RULE_fixedAddressParameter = 19, RULE_ipAddrOrHostnames = 20, RULE_lease = 21, 
		RULE_leaseAddress = 22, RULE_leaseDeclaration = 23, RULE_leaseParameters = 24, 
		RULE_ip6net = 25, RULE_ip4Address = 26, RULE_hostnameOrIpAddress = 27, 
		RULE_timestamp = 28, RULE_startEnd = 29, RULE_leaseParameter = 30, RULE_poolDeclaration = 31, 
		RULE_rangeLow = 32, RULE_rangeHigh = 33, RULE_addressRangeDeclaration = 34, 
		RULE_rangeLow6 = 35, RULE_rangeHigh6 = 36, RULE_addressRange6Declaration = 37, 
		RULE_ip6Address = 38, RULE_fixedPrefix6 = 39, RULE_failoverDeclaration = 40, 
		RULE_failoverStateDeclaration = 41, RULE_state = 42, RULE_date = 43, RULE_failoverStateStatement = 44, 
		RULE_peerStatement = 45, RULE_leaseTime = 46, RULE_ipAddressWithSubnet = 47, 
		RULE_ip6Prefix = 48, RULE_hardwareParameter = 49, RULE_optionParam = 50, 
		RULE_optionStatement = 51, RULE_optionOptionStatement = 52;
	public static readonly string[] ruleNames = {
		"config", "stringParameter", "parameter", "declaration", "statement", 
		"statements", "hostname", "hostDeclaration", "klass", "classDeclaration", 
		"sharedNetwork", "sharedNetworkDeclaration", "subnet", "netmask", "subnetDeclaration", 
		"subnet6", "subnet6Declaration", "groupDeclaration", "fixedAddress", "fixedAddressParameter", 
		"ipAddrOrHostnames", "lease", "leaseAddress", "leaseDeclaration", "leaseParameters", 
		"ip6net", "ip4Address", "hostnameOrIpAddress", "timestamp", "startEnd", 
		"leaseParameter", "poolDeclaration", "rangeLow", "rangeHigh", "addressRangeDeclaration", 
		"rangeLow6", "rangeHigh6", "addressRange6Declaration", "ip6Address", "fixedPrefix6", 
		"failoverDeclaration", "failoverStateDeclaration", "state", "date", "failoverStateStatement", 
		"peerStatement", "leaseTime", "ipAddressWithSubnet", "ip6Prefix", "hardwareParameter", 
		"optionParam", "optionStatement", "optionOptionStatement"
	};

	public override string GrammarFileName { get { return "DHCPDConfig.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public DHCPDConfigParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ConfigContext : ParserRuleContext {
		public IReadOnlyList<StatementContext> statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ConfigContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_config; }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDHCPDConfigVisitor<TResult> typedVisitor = visitor as IDHCPDConfigVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConfig(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConfigContext config() {
		ConfigContext _localctx = new ConfigContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_config);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SEMI) | (1L << HOST) | (1L << CLASS) | (1L << SHARED_NETWORK) | (1L << SUBNET) | (1L << GROUP) | (1L << FIXED_ADDRESS) | (1L << LEASE) | (1L << STARTS) | (1L << ENDS) | (1L << HARDWARE) | (1L << CLIENT_HOSTNAME) | (1L << DYNAMIC_BOOTP) | (1L << POOL) | (1L << RANGE) | (1L << FAILOVER) | (1L << PEER) | (1L << ADDRESS) | (1L << PORT) | (1L << DEFAULT_LEASE_TIME) | (1L << MAX_LEASE_TIME) | (1L << DYNAMIC_BOOTP_LEASE_CUTOFF) | (1L << DYNAMIC_BOOTP_LEASE_LENGTH) | (1L << DDNS_UPDATE_STYLE) | (1L << BOOT_UNKNOWN_CLIENTS) | (1L << ONE_LEASE_PER_CLIENT) | (1L << USE_HOST_DECL_NAME) | (1L << NEXT_SERVER) | (1L << SERVER_IDENTIFIER) | (1L << FILENAME) | (1L << ALLOW) | (1L << DENY) | (1L << USE_LEASE_ADDR_FOR_DEFAULT_ROUTE) | (1L << AUTHORITATIVE) | (1L << NOT_AUTHORITATIVE) | (1L << PRIMARY) | (1L << SECONDARY) | (1L << OPTION) | (1L << VENDOR_CLASS) | (1L << USER_CLASS) | (1L << TSTP) | (1L << TSFP) | (1L << ATSFP))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (BINDING - 64)) | (1L << (NEXT - 64)) | (1L << (CLTT - 64)) | (1L << (Boolean - 64)) | (1L << (QUOTE - 64)) | (1L << (ColonSeparatedList - 64)) | (1L << (NUMBER - 64)) | (1L << (Ip4Address - 64)) | (1L << (UIDSTRING - 64)) | (1L << (SERVERDUIDSTRING - 64)) | (1L << (STRING - 64)))) != 0)) {
				{
				{
				State = 106; statement();
				}
				}
				State = 111;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StringParameterContext : ParserRuleContext {
		public ITerminalNode QUOTE(int i) {
			return GetToken(DHCPDConfigParser.QUOTE, i);
		}
		public IReadOnlyList<ITerminalNode> QUOTE() { return GetTokens(DHCPDConfigParser.QUOTE); }
		public ITerminalNode STRING() { return GetToken(DHCPDConfigParser.STRING, 0); }
		public StringParameterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_stringParameter; }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDHCPDConfigVisitor<TResult> typedVisitor = visitor as IDHCPDConfigVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStringParameter(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StringParameterContext stringParameter() {
		StringParameterContext _localctx = new StringParameterContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_stringParameter);
		try {
			State = 116;
			switch (_input.La(1)) {
			case QUOTE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 112; Match(QUOTE);
				State = 113; Match(STRING);
				State = 114; Match(QUOTE);
				}
				break;
			case STRING:
				EnterOuterAlt(_localctx, 2);
				{
				State = 115; Match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParameterContext : ParserRuleContext {
		public LeaseTimeContext leaseTime() {
			return GetRuleContext<LeaseTimeContext>(0);
		}
		public ITerminalNode USE_LEASE_ADDR_FOR_DEFAULT_ROUTE() { return GetToken(DHCPDConfigParser.USE_LEASE_ADDR_FOR_DEFAULT_ROUTE, 0); }
		public FixedAddressParameterContext fixedAddressParameter() {
			return GetRuleContext<FixedAddressParameterContext>(0);
		}
		public ITerminalNode DDNS_UPDATE_STYLE() { return GetToken(DHCPDConfigParser.DDNS_UPDATE_STYLE, 0); }
		public LeaseParameterContext leaseParameter() {
			return GetRuleContext<LeaseParameterContext>(0);
		}
		public OptionStatementContext optionStatement() {
			return GetRuleContext<OptionStatementContext>(0);
		}
		public ITerminalNode FILENAME() { return GetToken(DHCPDConfigParser.FILENAME, 0); }
		public ITerminalNode BOOT_UNKNOWN_CLIENTS() { return GetToken(DHCPDConfigParser.BOOT_UNKNOWN_CLIENTS, 0); }
		public ITerminalNode DYNAMIC_BOOTP_LEASE_CUTOFF() { return GetToken(DHCPDConfigParser.DYNAMIC_BOOTP_LEASE_CUTOFF, 0); }
		public ITerminalNode OPTION() { return GetToken(DHCPDConfigParser.OPTION, 0); }
		public ITerminalNode AllowDenyKeyword() { return GetToken(DHCPDConfigParser.AllowDenyKeyword, 0); }
		public ITerminalNode NOT_AUTHORITATIVE() { return GetToken(DHCPDConfigParser.NOT_AUTHORITATIVE, 0); }
		public ITerminalNode SERVERDUIDSTRING() { return GetToken(DHCPDConfigParser.SERVERDUIDSTRING, 0); }
		public ITerminalNode DEFAULT_LEASE_TIME() { return GetToken(DHCPDConfigParser.DEFAULT_LEASE_TIME, 0); }
		public ITerminalNode DYNAMIC_BOOTP_LEASE_LENGTH() { return GetToken(DHCPDConfigParser.DYNAMIC_BOOTP_LEASE_LENGTH, 0); }
		public ITerminalNode ALLOW() { return GetToken(DHCPDConfigParser.ALLOW, 0); }
		public ITerminalNode ONE_LEASE_PER_CLIENT() { return GetToken(DHCPDConfigParser.ONE_LEASE_PER_CLIENT, 0); }
		public ITerminalNode USE_HOST_DECL_NAME() { return GetToken(DHCPDConfigParser.USE_HOST_DECL_NAME, 0); }
		public PeerStatementContext peerStatement() {
			return GetRuleContext<PeerStatementContext>(0);
		}
		public ITerminalNode SECONDARY() { return GetToken(DHCPDConfigParser.SECONDARY, 0); }
		public ITerminalNode NEXT_SERVER() { return GetToken(DHCPDConfigParser.NEXT_SERVER, 0); }
		public ITerminalNode Date() { return GetToken(DHCPDConfigParser.Date, 0); }
		public ITerminalNode SERVER_IDENTIFIER() { return GetToken(DHCPDConfigParser.SERVER_IDENTIFIER, 0); }
		public ITerminalNode SEMI() { return GetToken(DHCPDConfigParser.SEMI, 0); }
		public ITerminalNode PRIMARY() { return GetToken(DHCPDConfigParser.PRIMARY, 0); }
		public HardwareParameterContext hardwareParameter() {
			return GetRuleContext<HardwareParameterContext>(0);
		}
		public ITerminalNode AUTHORITATIVE() { return GetToken(DHCPDConfigParser.AUTHORITATIVE, 0); }
		public StringParameterContext stringParameter() {
			return GetRuleContext<StringParameterContext>(0);
		}
		public ITerminalNode MAX_LEASE_TIME() { return GetToken(DHCPDConfigParser.MAX_LEASE_TIME, 0); }
		public ITerminalNode Boolean() { return GetToken(DHCPDConfigParser.Boolean, 0); }
		public ITerminalNode DENY() { return GetToken(DHCPDConfigParser.DENY, 0); }
		public ParameterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_parameter; }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDHCPDConfigVisitor<TResult> typedVisitor = visitor as IDHCPDConfigVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParameter(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParameterContext parameter() {
		ParameterContext _localctx = new ParameterContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_parameter);
		try {
			State = 195;
			switch ( Interpreter.AdaptivePredict(_input,2,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 118; Match(DEFAULT_LEASE_TIME);
				State = 119; leaseTime();
				State = 120; Match(SEMI);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 122; Match(MAX_LEASE_TIME);
				State = 123; leaseTime();
				State = 124; Match(SEMI);
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 126; Match(DYNAMIC_BOOTP_LEASE_CUTOFF);
				State = 127; Match(Date);
				State = 128; Match(SEMI);
				}
				break;

			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 129; Match(DYNAMIC_BOOTP_LEASE_LENGTH);
				State = 130; leaseTime();
				State = 131; Match(SEMI);
				}
				break;

			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 133; Match(DDNS_UPDATE_STYLE);
				State = 134; stringParameter();
				State = 135; Match(SEMI);
				}
				break;

			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 137; Match(BOOT_UNKNOWN_CLIENTS);
				State = 138; Match(Boolean);
				State = 139; Match(SEMI);
				}
				break;

			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 140; Match(ONE_LEASE_PER_CLIENT);
				State = 141; Match(Boolean);
				State = 142; Match(SEMI);
				}
				break;

			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 143; Match(USE_HOST_DECL_NAME);
				State = 144; Match(Boolean);
				State = 145; Match(SEMI);
				}
				break;

			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 146; Match(NEXT_SERVER);
				State = 147; stringParameter();
				State = 148; Match(SEMI);
				}
				break;

			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 150; Match(SERVER_IDENTIFIER);
				State = 151; stringParameter();
				State = 152; Match(SEMI);
				}
				break;

			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 154; Match(FILENAME);
				State = 155; stringParameter();
				State = 156; Match(SEMI);
				}
				break;

			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 158; hardwareParameter();
				State = 159; Match(SEMI);
				}
				break;

			case 13:
				EnterOuterAlt(_localctx, 13);
				{
				State = 161; fixedAddressParameter();
				State = 162; Match(SEMI);
				}
				break;

			case 14:
				EnterOuterAlt(_localctx, 14);
				{
				State = 164; Match(ALLOW);
				State = 165; Match(AllowDenyKeyword);
				State = 166; Match(SEMI);
				}
				break;

			case 15:
				EnterOuterAlt(_localctx, 15);
				{
				State = 167; Match(DENY);
				State = 168; Match(AllowDenyKeyword);
				State = 169; Match(SEMI);
				}
				break;

			case 16:
				EnterOuterAlt(_localctx, 16);
				{
				State = 170; Match(USE_LEASE_ADDR_FOR_DEFAULT_ROUTE);
				State = 171; Match(Boolean);
				State = 172; Match(SEMI);
				}
				break;

			case 17:
				EnterOuterAlt(_localctx, 17);
				{
				State = 173; Match(AUTHORITATIVE);
				State = 174; Match(SEMI);
				}
				break;

			case 18:
				EnterOuterAlt(_localctx, 18);
				{
				State = 175; Match(NOT_AUTHORITATIVE);
				State = 176; Match(SEMI);
				}
				break;

			case 19:
				EnterOuterAlt(_localctx, 19);
				{
				State = 177; Match(PRIMARY);
				State = 178; Match(SEMI);
				}
				break;

			case 20:
				EnterOuterAlt(_localctx, 20);
				{
				State = 179; Match(SECONDARY);
				State = 180; Match(SEMI);
				}
				break;

			case 21:
				EnterOuterAlt(_localctx, 21);
				{
				State = 181; leaseParameter();
				State = 182; Match(SEMI);
				}
				break;

			case 22:
				EnterOuterAlt(_localctx, 22);
				{
				State = 184; optionStatement();
				State = 185; Match(SEMI);
				}
				break;

			case 23:
				EnterOuterAlt(_localctx, 23);
				{
				State = 187; peerStatement();
				State = 188; Match(SEMI);
				}
				break;

			case 24:
				EnterOuterAlt(_localctx, 24);
				{
				State = 190; Match(SERVERDUIDSTRING);
				}
				break;

			case 25:
				EnterOuterAlt(_localctx, 25);
				{
				State = 191; Match(OPTION);
				State = 192; optionStatement();
				State = 193; Match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationContext : ParserRuleContext {
		public FailoverStateDeclarationContext failoverStateDeclaration() {
			return GetRuleContext<FailoverStateDeclarationContext>(0);
		}
		public HostDeclarationContext hostDeclaration() {
			return GetRuleContext<HostDeclarationContext>(0);
		}
		public AddressRangeDeclarationContext addressRangeDeclaration() {
			return GetRuleContext<AddressRangeDeclarationContext>(0);
		}
		public SubnetDeclarationContext subnetDeclaration() {
			return GetRuleContext<SubnetDeclarationContext>(0);
		}
		public GroupDeclarationContext groupDeclaration() {
			return GetRuleContext<GroupDeclarationContext>(0);
		}
		public FailoverDeclarationContext failoverDeclaration() {
			return GetRuleContext<FailoverDeclarationContext>(0);
		}
		public ITerminalNode VENDOR_CLASS() { return GetToken(DHCPDConfigParser.VENDOR_CLASS, 0); }
		public SharedNetworkDeclarationContext sharedNetworkDeclaration() {
			return GetRuleContext<SharedNetworkDeclarationContext>(0);
		}
		public LeaseDeclarationContext leaseDeclaration() {
			return GetRuleContext<LeaseDeclarationContext>(0);
		}
		public PoolDeclarationContext poolDeclaration() {
			return GetRuleContext<PoolDeclarationContext>(0);
		}
		public ITerminalNode USER_CLASS() { return GetToken(DHCPDConfigParser.USER_CLASS, 0); }
		public ClassDeclarationContext classDeclaration() {
			return GetRuleContext<ClassDeclarationContext>(0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_declaration; }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDHCPDConfigVisitor<TResult> typedVisitor = visitor as IDHCPDConfigVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationContext declaration() {
		DeclarationContext _localctx = new DeclarationContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_declaration);
		try {
			State = 210;
			switch ( Interpreter.AdaptivePredict(_input,3,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 197; hostDeclaration();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 198; groupDeclaration();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 199; sharedNetworkDeclaration();
				}
				break;

			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 200; subnetDeclaration();
				}
				break;

			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 201; Match(VENDOR_CLASS);
				State = 202; classDeclaration();
				}
				break;

			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 203; Match(USER_CLASS);
				State = 204; classDeclaration();
				}
				break;

			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 205; failoverDeclaration();
				}
				break;

			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 206; failoverStateDeclaration();
				}
				break;

			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 207; addressRangeDeclaration();
				}
				break;

			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 208; leaseDeclaration();
				}
				break;

			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 209; poolDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public DeclarationContext declaration() {
			return GetRuleContext<DeclarationContext>(0);
		}
		public ParameterContext parameter() {
			return GetRuleContext<ParameterContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_statement; }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDHCPDConfigVisitor<TResult> typedVisitor = visitor as IDHCPDConfigVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_statement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 214;
			switch ( Interpreter.AdaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				State = 212; parameter();
				}
				break;

			case 2:
				{
				State = 213; declaration();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementsContext : ParserRuleContext {
		public IReadOnlyList<StatementContext> statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_statements; }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDHCPDConfigVisitor<TResult> typedVisitor = visitor as IDHCPDConfigVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatements(this);
			else return visitor.VisitChildren(this);
		}
	}
